--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                     </li>
                     <li>
-                        <a id="cv-menu-mobile" href="./src/public/assets/documents/curriculo-gilberto.pdf" download="curriculo-gilberto.pdf">
+                        <a id="cv-menu-mobile" href="./src/public/assets/documents/cv-gilbertolopes-fullstack.pdf" download="cv-gilbertolopes-fullstack.pdf">
                             <i class="ri-file-download-line bx"></i> Currículo
                         </a>
                     </li>
@@ -175,7 +175,7 @@
                         <p>Desenvolvedor Full Stack</p>
                     </div><br>
                     <p>
-                        Desenvolvedor full stack com experiência prática em integração de APIs de terceiros utilizando OAuth, além de proteção de rotas, autenticação e autorização com JWT. Criador do SaaS ShopTurbo, um sistema ERP com integração com API oficial da Shopee. Possuo experiência no desenvolvimento de projetos frontend e backend desde a concepção até chegar ao deploy, incluindo levantamento de requisitos com cliente, aquisição de domínio, configuração de DNS, subdomínios e conexão com bancos de dados externos. Sou entusiasta, fã e usuário do ecossistema Linux. Além disso, criei um canal no YouTube(@codigodesbugado) para ajudar iniciantes entender conceitos de programação.
+                        Desenvolvedor full stack com experiência prática em integração de APIs de terceiros utilizando OAuth, além de proteção de rotas, autenticação e autorização com JWT. Criador do SaaS ShopTurbo, um sistema ERP com integração com API oficial da Shopee. Possuo experiência no desenvolvimento de projetos frontend e backend desde a concepção até chegar ao deploy, incluindo levantamento de requisitos com cliente, aquisição de domínio, configuração de DNS, subdomínios e conexão com bancos de dados externos. Sou entusiasta, fã e usuário do ecossistema Linux.
                     </p>
                     <p>
                         Aberto a oportunidades que me permitam aprender, crescer e contribuir de forma prática em projetos que geram valor na empresa e nas pessoas.
@@ -453,7 +453,7 @@
                     <img class="img-profile" src="./src/public/assets/img/gil-500-1x1.png" alt="Gilberto Lopes">
                 </li>
                 <li>
-                    <a href="./src/public/assets/documents/curriculo-gilberto.pdf" download="curriculo-gilberto.pdf">
+                    <a href="./src/public/assets/documents/cv-gilbertolopes-fullstack.pdf" download="cv-gilbertolopes-fullstack.pdf">
                         <i class="ri-file-download-line bx"></i> Currículo
                     </a>
                 </li>
