melhorar texto da secao sobre mim

--- a/index.html
+++ b/index.html
@@ -175,8 +175,11 @@
                         <p>Desenvolvedor Full Stack</p>
                     </div><br>
                     <p>
-                        Desenvolvedor full stack com experiência prática em integração de APIs de terceiros utilizando OAuth, além de proteção de rotas, autenticação e autorização com JWT. Criador do SaaS ShopTurbo, um sistema ERP com integração com API oficial da Shopee. Possuo experiência no desenvolvimento de projetos frontend e backend desde a concepção até chegar ao deploy, incluindo levantamento de requisitos com cliente, aquisição de domínio, configuração de DNS, subdomínios e conexão com bancos de dados externos. Sou entusiasta, fã e usuário do ecossistema Linux.
+                        Desenvolvedor Full Stack com experiência prática em integração com API de terceiros utilizando OAuth, autenticação e autorização com JWT. Capaz de entregar projetos frontend e backend desde a concepção até o deploy, utilizando TypeScript, JavaScript, Next, React, Node e Express. Além do uso de ORM para modelagem e gerenciamento de migrations em bancos de dados relacionais como MySQL, PostgreSQL e cache usando Redis.
                     </p>
+                    <p>
+                        Tenho muita facilidade em me relacionar com as pessoas, busco dar meu melhor em tudo que faço e estou sempre aberto à críticas e opniões.
+                    </p><br>
                     <p>
                         Aberto a oportunidades que me permitam aprender, crescer e contribuir de forma prática em projetos que geram valor na empresa e nas pessoas.
                     </p><br>
